force-app/main/default/objects/Order/fields/Data_Validated_c__c.field-meta.xml
<CustomField>
    <fullName>Data_Validated_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Validated</label>
    <type>Checkbox</type>
</CustomField>