force-app/main/default/objects/Order/fields/EC_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>EC_Contact_Name__c</fullName>
    <formula>SBQQ__Quote__r.End_Customer_Contact__r.Full_Name__c</formula>
    <label>EC Contact Name</label>
    <type>Text</type>
</CustomField>