force-app/main/default/objects/Order/fields/EC_Contact_SAP_Number__c.field-meta.xml
<CustomField>
    <fullName>EC_Contact_SAP_Number__c</fullName>
    <formula>SBQQ__Quote__r.End_Customer_Contact__r.SAP_Contact_ID__c</formula>
    <label>EC Contact SAP Number</label>
    <type>Text</type>
</CustomField>