force-app/main/default/objects/Order/fields/End_Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Account__c</fullName>
    <formula>SBQQ__Quote__r.SBQQ__Account__r.Name</formula>
    <label>End Customer Account</label>
    <type>Text</type>
</CustomField>