force-app/main/default/objects/Order/fields/End_Customer_Address__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Address__c</fullName>
    <formula>SBQQ__Quote__r.SBQQ__Account__r.BillingStreet+&apos;, &apos;+SBQQ__Quote__r.SBQQ__Account__r.BillingCity+&apos;, &apos;+SBQQ__Quote__r.SBQQ__Account__r.BillingState+&apos;, &apos;+ SBQQ__Quote__r.SBQQ__Account__r.BillingCountry+&apos;-&apos;+ SBQQ__Quote__r.SBQQ__Account__r.BillingPostalCode</formula>
    <label>End Customer Address</label>
    <type>Text</type>
</CustomField>