force-app/main/default/objects/Order/fields/End_Customer_SAP_Number__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_SAP_Number__c</fullName>
    <formula>SBQQ__Quote__r.SBQQ__Account__r.SAP_Customer_Number__c</formula>
    <label>End Customer SAP Number</label>
    <type>Text</type>
</CustomField>