force-app/main/default/objects/Order/fields/Generate_Email__c.field-meta.xml
<CustomField>
    <fullName>Generate_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Submit Sales Order Creation Request Email to Order Management Team</description>
    <inlineHelpText>Submit Sales Order Creation Request Email to Order Management Team</inlineHelpText>
    <label>Submit SO Request</label>
    <type>Checkbox</type>
</CustomField>