force-app/main/default/objects/Order/fields/New_EC_Contact_Lookup__c.field-meta.xml
<CustomField>
    <fullName>New_EC_Contact_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>New EC Contact Lookup for Order Fulfillment</description>
    <inlineHelpText>New EC Contact Lookup for Order Fulfillment</inlineHelpText>
    <label>EC Contact Name (Entitlement Org)</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>End Customer Contact is required to be related to the Quote End Customer Account</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.New_End_Customer_Account_Lookup__c</valueField>
        </filterItems>
        <infoMessage>End Customer Contact is required to be related to the Quote End Customer Account.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>