force-app/main/default/objects/Order/fields/New_EC_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>New_EC_Contact_Name__c</fullName>
    <formula>IF( Use_Quote_EC_Account_Info__c ,  SBQQ__Quote__r.End_Customer_Contact__r.Full_Name__c ,  New_EC_Contact_Lookup__r.Full_Name__c )</formula>
    <label>EC Contact Name (Entitlement Org)</label>
    <type>Text</type>
</CustomField>