force-app/main/default/objects/Order/fields/New_EC_Contact_SAP_Number__c.field-meta.xml
<CustomField>
    <fullName>New_EC_Contact_SAP_Number__c</fullName>
    <formula>TEXT(VALUE(IF( Use_Quote_EC_Account_Info__c ,   SBQQ__Quote__r.End_Customer_Contact__r.SAP_Contact_ID__c ,  New_EC_Contact_Lookup__r.SAP_Contact_ID__c  )))</formula>
    <label>EC Contact SAP Number (Entitlement Org)</label>
    <type>Text</type>
</CustomField>