force-app/main/default/objects/Order/fields/New_End_Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>New_End_Customer_Account__c</fullName>
    <formula>If(Use_Quote_EC_Account_Info__c,   SBQQ__Quote__r.SBQQ__Account__r.Name,  New_End_Customer_Account_Lookup__r.Name )</formula>
    <label>New End Customer Account</label>
    <type>Text</type>
</CustomField>