force-app/main/default/objects/Order/fields/New_End_Customer_Account_Lookup__c.field-meta.xml
<CustomField>
    <fullName>New_End_Customer_Account_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>New End Customer Account for Order Fulfillment</description>
    <label>End Customer Account (Entitlement Org)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>