force-app/main/default/objects/Order/fields/New_End_Customer_Address__c.field-meta.xml
<CustomField>
    <fullName>New_End_Customer_Address__c</fullName>
    <formula>New_End_Customer_Account_Lookup__r.BillingStreet+&apos;, &apos;+New_End_Customer_Account_Lookup__r.BillingCity+&apos;, &apos;+New_End_Customer_Account_Lookup__r.BillingState+&apos;, &apos;+ New_End_Customer_Account_Lookup__r.BillingCountry+&apos;-&apos;+ New_End_Customer_Account_Lookup__r.BillingPostalCode</formula>
    <label>End Customer Address (Entitlement Org)</label>
    <type>Text</type>
</CustomField>