force-app/main/default/objects/Order/fields/New_End_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>New_End_Customer_Name__c</fullName>
    <formula>IF( Use_Quote_EC_Account_Info__c ,SBQQ__Quote__r.SBQQ__Account__r.Name, New_End_Customer_Account_Lookup__r.Name )</formula>
    <label>New End Customer Name</label>
    <type>Text</type>
</CustomField>