force-app/main/default/objects/Order/fields/New_End_Customer_SAP_Number__c.field-meta.xml
<CustomField>
    <fullName>New_End_Customer_SAP_Number__c</fullName>
    <formula>TEXT(VALUE(IF( Use_Quote_EC_Account_Info__c  ,SBQQ__Quote__r.SBQQ__Account__r.SAP_Customer_Number__c,  New_End_Customer_Account_Lookup__r.SAP_Customer_Number__c )))</formula>
    <label>End Customer SAP No (Entitlement Org)</label>
    <type>Text</type>
</CustomField>