force-app/main/default/objects/Order/fields/Opportunity_No__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_No__c</fullName>
    <formula>SBQQ__Quote__r.SBQQ__Opportunity2__r.Opportunity_Number__c</formula>
    <label>Opportunity #</label>
    <type>Text</type>
</CustomField>