force-app/main/default/objects/Order/fields/PO_Customer_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>PO_Customer_Requested_Date__c</fullName>
    <label>PO Customer Requested Date</label>
    <type>Date</type>
</CustomField>