force-app/main/default/objects/Order/fields/PO_Date__c.field-meta.xml
<CustomField>
    <fullName>PO_Date__c</fullName>
    <description>PO Customer Requested Date</description>
    <inlineHelpText>PO Customer Requested Date</inlineHelpText>
    <label>PO Date</label>
    <type>Date</type>
</CustomField>