force-app/main/default/objects/Order/fields/Reseller_Address__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Address__c</fullName>
    <formula>SBQQ__Quote__r.Reseller_Account__r.BillingStreet+&apos;, &apos;+SBQQ__Quote__r.Reseller_Account__r.BillingCity+&apos;, &apos;+SBQQ__Quote__r.Reseller_Account__r.BillingState+&apos;, &apos;+SBQQ__Quote__r.Reseller_Account__r.BillingCountry+&apos;- &apos;+SBQQ__Quote__r.Reseller_Account__r.BillingPostalCode</formula>
    <label>Reseller Address</label>
    <type>Text</type>
</CustomField>