force-app/main/default/objects/Order/fields/Reseller_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Contact_Name__c</fullName>
    <formula>SBQQ__Quote__r.Reseller_Contact__r.Full_Name__c</formula>
    <label>Reseller Contact Name</label>
    <type>Text</type>
</CustomField>