force-app/main/default/objects/Order/fields/Reseller_Contact_SAP_Number__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Contact_SAP_Number__c</fullName>
    <formula>TEXT(VALUE(SBQQ__Quote__r.Reseller_Contact__r.SAP_Contact_ID__c))</formula>
    <label>Reseller Contact SAP Number</label>
    <type>Text</type>
</CustomField>