force-app/main/default/objects/Order/fields/Reseller_Name__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Name__c</fullName>
    <formula>SBQQ__Quote__r.Reseller_Account__r.Name</formula>
    <label>Reseller Name</label>
    <type>Text</type>
</CustomField>