force-app/main/default/objects/Order/fields/Reseller_SAP_Number__c.field-meta.xml
<CustomField>
    <fullName>Reseller_SAP_Number__c</fullName>
    <formula>TEXT(VALUE(SBQQ__Quote__r.Reseller_Account__r.SAP_Customer_Number__c))</formula>
    <label>Reseller SAP Number</label>
    <type>Text</type>
</CustomField>