force-app/main/default/objects/Order/fields/Sales_Organization__c.field-meta.xml
<CustomField>
    <fullName>Sales_Organization__c</fullName>
    <description>Sales Organization used for order booking in SAP</description>
    <inlineHelpText>2100 - US Sales Org
3300 - SG Sales Org</inlineHelpText>
    <label>Sales Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2100</fullName>
            </value>
            <value>
                <fullName>3300</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>