force-app/main/default/objects/Order/fields/SAP_Error__c.field-meta.xml
<CustomField>
    <fullName>SAP_Error__c</fullName>
    <label>SAP Error</label>
    <type>TextArea</type>
</CustomField>