force-app/main/default/objects/Order/fields/Sold_To_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Customer_Name__c</fullName>
    <description>Sold To Customer Name for Email Subject</description>
    <inlineHelpText>Sold To Customer Name for Email Subject</inlineHelpText>
    <label>Sold To Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>