force-app/main/default/objects/Order/fields/SOQ_Order_CC_Emails__c.field-meta.xml
<CustomField>
    <fullName>SOQ_Order_CC_Emails__c</fullName>
    <formula>&apos;CPQITSupport@nvidia.com,jrando@nvidia.com&apos;</formula>
    <label>SOQ_Order_CC_Emails</label>
    <type>Text</type>
</CustomField>