force-app/main/default/objects/Order/fields/SOQ_Order_To_Emails__c.field-meta.xml
<CustomField>
    <fullName>SOQ_Order_To_Emails__c</fullName>
    <formula>IF(  NOT(ISPICKVAL(Opportunity.Region__c,&apos;JAPAN&apos;)) , &apos;SOQ-POUS@exchange.nvidia.com&apos;, &apos;SOQ-POJP@exchange.nvidia.com&apos;)</formula>
    <label>SOQ_Order_To_Emails</label>
    <type>Text</type>
</CustomField>