force-app/main/default/objects/Order/fields/Submitted_to_SAP__c.field-meta.xml
<CustomField>
    <fullName>Submitted_to_SAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted to SAP</label>
    <type>Checkbox</type>
</CustomField>