force-app/main/default/objects/Order/fields/Total_Amount_of_CPQ_Products__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_of_CPQ_Products__c</fullName>
    <description>SOQ: Total Amount of NV Branded Products for PO validation</description>
    <inlineHelpText>Total Amount of NV Branded Products from Quote</inlineHelpText>
    <label>Total Amount of NV Branded Products</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>