force-app/main/default/objects/Order/fields/Use_Quote_EC_Account_Info__c.field-meta.xml
<CustomField>
    <fullName>Use_Quote_EC_Account_Info__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Check flag if End Customer on Quote and PO are the same. If not, populate PO End Customer Information.</inlineHelpText>
    <label>Use Quote EC Account Info</label>
    <type>Checkbox</type>
</CustomField>