force-app/main/default/objects/Order/recordTypes/Initial_Order.recordType-meta.xml
<RecordType>
    <fullName>Initial_Order</fullName>
    <active>true</active>
    <description>SOQ -  Initial Order</description>
    <label>Initial Order</label>
</RecordType>