force-app/main/default/objects/Order/recordTypes/Not_Submitted_To_Sap.recordType-meta.xml
<RecordType>
    <fullName>Not_Submitted_To_Sap</fullName>
    <active>true</active>
    <label>Not Submitted To Sap</label>
</RecordType>