force-app/main/default/objects/Order/recordTypes/Submitted_To_Sap.recordType-meta.xml
<RecordType>
    <fullName>Submitted_To_Sap</fullName>
    <active>true</active>
    <label>Submitted To Sap</label>
</RecordType>