force-app/main/default/objects/Order/validationRules/Initial_Order_CRD_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Initial_Order_CRD_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Type, &apos;New&apos;), IF(RecordTypeId==&apos;0127i000001rdgp&apos;, TRUE, FALSE) ,  NOT(ISNEW())  , NOT(ISNULL(SBQQ__Quote__r.SBQQ__ExpirationDate__c)) ,  IF(  PO_Date__c  &lt;=  SBQQ__Quote__r.SBQQ__ExpirationDate__c  , FALSE, TRUE))</errorConditionFormula>
    <errorMessage>Customer Requested Date on the PO is greater than the Quote Expiration Date</errorMessage>
</ValidationRule>