force-app/main/default/objects/Order/validationRules/Initial_Order_PO_Amount_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Initial_Order_PO_Amount_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(Type, &apos;New&apos;) ,  IF(TotalAmount== PO_Amount__c , FALSE, TRUE))</errorConditionFormula>
    <errorMessage>PO Amount must match with the total Order Amount</errorMessage>
</ValidationRule>