force-app/main/default/objects/Order/validationRules/Initial_Order_PO_Information.validationRule-meta.xml
<ValidationRule>
    <fullName>Initial_Order_PO_Information</fullName>
    <active>false</active>
    <errorConditionFormula>AND(   Generate_Email__c , ISPICKVAL(Type, &apos;New&apos;), OR( ISBLANK(Purchase_Order_Number__c ),  ISBLANK(PO_Amount__c),  ISBLANK(Text(Sales_Organization__c))  )   )</errorConditionFormula>
    <errorMessage>Purchase Order #, PO Amount, Sales Organization are required.</errorMessage>
</ValidationRule>