force-app/main/default/objects/Order/validationRules/New_Ordering_End_Customer_Information.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Ordering_End_Customer_Information</fullName>
    <active>true</active>
    <description>New_Ordering_End_Customer_Information</description>
    <errorConditionFormula>AND(NOT(Use_Quote_EC_Account_Info__c), OR(ISBLANK(  New_End_Customer_Account_Lookup__c ), ISBLANK(  New_EC_Contact_Lookup__c ) ) )</errorConditionFormula>
    <errorDisplayField>Use_Quote_EC_Account_Info__c</errorDisplayField>
    <errorMessage>Check flag if End Customer on Quote and PO are the same. If not, populate PO End Customer Information.</errorMessage>
</ValidationRule>