force-app/main/default/objects/Order/validationRules/PO_Date_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>PO_Date_is_required</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(PO_Date__c)</errorConditionFormula>
    <errorDisplayField>PO_Date__c</errorDisplayField>
    <errorMessage>PO Date is Required</errorMessage>
</ValidationRule>