force-app/main/default/objects/Order/validationRules/Sales_Organization_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_Organization_is_required</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(TEXT(Sales_Organization__c))</errorConditionFormula>
    <errorDisplayField>Sales_Organization__c</errorDisplayField>
    <errorMessage>Sales Organization is Required</errorMessage>
</ValidationRule>