force-app/main/default/objects/Order/validationRules/Validate_Purchase_Order_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Purchase_Order_Number</fullName>
    <active>false</active>
    <description>Validate Purchase Number</description>
    <errorConditionFormula>ISBLANK( Purchase_Order_Number__c )</errorConditionFormula>
    <errorMessage>Please enter Purchase Order Number</errorMessage>
</ValidationRule>